terra_setup/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "4.0.0"
    }
  }
  // This is the required version of Terraform
  required_version = "~> 1.2.7"
}

provider "aws" {
  region = var.aws_region
}

data "aws_availability_zones" "available" {
  state = "available"
}

data "aws_ami" "amazon-2" {
  most_recent = true

  filter {
    name = "name"
    values = ["amzn2-ami-hvm-*-x86_64-ebs"]
  }
#  owners = ["099720109477"]
  owners = ["amazon"]
}


resource "aws_instance" "master" {

  ami = data.aws_ami.amazon-2.id
  count                  = var.settings.web_app.count
  instance_type          = var.settings.web_app.instance_type
  subnet_id              = aws_subnet.tutorial_public_subnet[count.index].id
  key_name               = aws_key_pair.tutorial_kp.key_name
  vpc_security_group_ids = [aws_security_group.tutorial_web_sg.id]

  tags = {
    Name = "tutorial_web_${count.index}"
  }

  }
resource "aws_key_pair" "tutorial_kp" {
    key_name   = "tutorial_kp"
    public_key = file("tutorial_kp.pub")
  }

resource "aws_eip" "tutorial_web_eip" {
  count    = var.settings.web_app.count
  instance = aws_instance.master[count.index].id
  vpc      = true

  tags = {
    Name = "tutorial_web_eip_${count.index}"
  }
}
